--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,15 +1,14 @@
 sonar.projectKey=pphum-prathum_Software-Development-and-Design
 sonar.organization=pphum-prathum
+sonar.host.url=https://sonarcloud.io
 
-sonar.host.url=https://sonarcloud.io  # Add this line
-sonar.java.binaries=target/classes  # Use correct binary path (Gradle: build/classes)
-sonar.sources=src  # Add this to define your Java source files
+# Set correct Java source directory
+sonar.sources=HolidayTravelVehicles
+sonar.java.binaries=build/classes
 
-# Adjust exclusions if needed, but DO NOT exclude all Java files
-sonar.exclusions=src/test/**, src/generated/**
-sonar.coverage.exclusions=src/test/**
+# Exclude only test and generated files (optional)
+sonar.exclusions=HolidayTravelVehicles/test/**, HolidayTravelVehicles/generated/**
+sonar.coverage.exclusions=HolidayTravelVehicles/test/**
 
-#sonar.language=java
-#sonar.java.binaries=.
-#sonar.exclusions=**/*.java
-#sonar.coverage.exclusions=**/*.java
+# Encoding (optional)
+sonar.sourceEncoding=UTF-8
