--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -24,5 +24,5 @@ jobs:
             -Dsonar.projectKey=pphum-prathum_Software-Development-and-Design
             -Dsonar.organization=pphum-prathum
             -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.sources=src
-            -Dsonar.java.binaries=target/classes
+            -Dsonar.sources=HolidayTravelVehicles
+            -Dsonar.java.binaries=build/classes
