--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -9,12 +9,19 @@ on:
 jobs:
   sonarqube:
     name: SonarQube
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for better relevancy of analysis
-          
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Build Java Project
+        run: mvn clean package  # This generates target/classes
+
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
@@ -25,4 +32,4 @@ jobs:
             -Dsonar.organization=pphum-prathum
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.sources=HolidayTravelVehicles
-            -Dsonar.java.binaries=build/classes
+            -Dsonar.java.binaries=target/classes
