--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,4 +1,5 @@
-name: SonarCloud workflow
+name: SonarCloud Analysis
+
 on:
   push:
     branches:
@@ -8,10 +9,14 @@ on:
 
 jobs:
   sonarqube:
-    name: SonarQube
+    name: SonarQube Analysis
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Ensures complete history for SonarCloud
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -19,10 +24,13 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Build Java Project
-        run: mvn clean package  # This generates target/classes
+      - name: Grant execute permission for Gradle
+        run: chmod +x gradlew  # Makes sure Gradle wrapper is executable
 
-      - name: SonarQube Scan
+      - name: Build and Test with Gradle
+        run: ./gradlew build test  # Builds the project and runs tests
+
+      - name: Run SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -32,4 +40,12 @@ jobs:
             -Dsonar.organization=pphum-prathum
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.sources=HolidayTravelVehicles
-            -Dsonar.java.binaries=target/classes
+            -Dsonar.java.binaries=build/classes/java/main  # Correct output folder for Gradle
+            -Dsonar.junit.reportPaths=build/test-results/test  # Includes test reports
+            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml  # For coverage reports
+
+      - name: Upload Test Reports (Optional)
+        uses: actions/upload-artifact@v4
+        with:
+          name: Test Reports
+          path: build/reports/tests/test  # Uploads test results for debugging
