--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -24,11 +24,11 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Grant execute permission for Gradle
-        run: chmod +x gradlew  # Makes sure Gradle wrapper is executable
+      - name: Install Gradle
+        run: sudo apt update && sudo apt install -y gradle
 
       - name: Build and Test with Gradle
-        run: ./gradlew build test  # Builds the project and runs tests
+        run: gradle build test  # No "./gradlew", use "gradle" instead
 
       - name: Run SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v4
