--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Ensures complete history for SonarCloud
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -28,7 +28,10 @@ jobs:
         run: sudo apt update && sudo apt install -y gradle
 
       - name: Build Java Project
-        run: gradle build
+        run: gradle build  # Only builds, no tests
+
+      - name: Debug Build Output
+        run: ls -R build/  # Show compiled files to find the correct path
 
       - name: Run SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v4
@@ -40,12 +43,4 @@ jobs:
             -Dsonar.organization=pphum-prathum
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.sources=HolidayTravelVehicles
-            -Dsonar.java.binaries=build/classes/java/main  # Correct output folder for Gradle
-            -Dsonar.junit.reportPaths=build/test-results/test  # Includes test reports
-            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml  # For coverage reports
-
-      - name: Upload Test Reports (Optional)
-        uses: actions/upload-artifact@v4
-        with:
-          name: Test Reports
-          path: build/reports/tests/test  # Uploads test results for debugging
+            -Dsonar.java.binaries=build/classes  # Update if needed after debug
