--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Ensures full history for SonarCloud
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -24,14 +24,13 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Install Gradle
-        run: sudo apt update && sudo apt install -y gradle
-
-      - name: Build Java Project
-        run: gradle build  # Only builds, no tests
+      - name: Compile Java Manually
+        run: |
+          mkdir -p build/classes
+          javac -d build/classes HolidayTravelVehicles/*.java
 
       - name: Debug Build Output
-        run: ls -R build/  # Show compiled files to find the correct path
+        run: ls -R build/  # Show compiled files
 
       - name: Run SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v4
@@ -43,4 +42,4 @@ jobs:
             -Dsonar.organization=pphum-prathum
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.sources=HolidayTravelVehicles
-            -Dsonar.java.binaries=build/classes  # Update if needed after debug
+            -Dsonar.java.binaries=build/classes  # Use manually compiled output
